fix(auction): 테스트 코드 변경
fix(auction): 테스트 코드 변경